--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,11 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Production</param-value>
     </context-param>
+
+	<context-param> 
+                <param-name>javax.faces.PARTIAL_STATE_SAVING</param-name> 
+                <param-value>false</param-value> 
+        </context-param>
     
     <listener>
         <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
