Exporting is working.

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,16 @@
     </properties>
     
     <dependencies>
+	<dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.7</version>
+        </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
@@ -24,7 +34,7 @@
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>6.0</version>
+            <version>6.0.19</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
