--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,22 @@
     </properties>
 
     <dependencies>
+	<dependency>
+                <groupId>org.omnifaces</groupId>
+                <artifactId>omnifaces</artifactId>
+                <version>2.7.1</version>
+	</dependency>
+
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+	</dependency>
+
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>7.0</version>
+            <version>7.0.7</version>
         </dependency>
 
         <!-- javax.* APIs -->
@@ -140,6 +152,17 @@
                     <scanIntervalSeconds>5</scanIntervalSeconds>
                 </configuration>
             </plugin>
+	    <plugin>
+		<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
+		<artifactId>maven-java-formatter-plugin</artifactId>
+		<executions>
+			<execution>
+				<goals>
+					 <goal>format</goal>
+				</goals>
+			</execution>
+		</executions>
+	   </plugin>
         </plugins>
     </build>
 
