--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
     </properties>
 
     <dependencies>
+	<dependency>
+		<groupId>org.primefaces.extensions</groupId>
+		<artifactId>primefaces-extensions</artifactId>
+		<version>7.0.2</version>
+	</dependency>
+
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
